force-app/main/default/objects/Cache_Configuration__mdt/fields/PlatformCacheTimeToLive__c.field-meta.xml
<CustomField>
    <fullName>PlatformCacheTimeToLive__c</fullName>
    <label>Platform Cache Time To Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>