force-app/main/default/objects/Cache_Configuration__mdt/fields/PlatformCacheVisibility__c.field-meta.xml
<CustomField>
    <fullName>PlatformCacheVisibility__c</fullName>
    <label>Platform Cache Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>